--- a/deployments/devnet/plasma.yaml
+++ b/deployments/devnet/plasma.yaml
@@ -1,5 +1,32 @@
+# Plasma Testnet Configuration for Curve Lite Deployment
+
 config:
   chain_id: 9746
+  file_name: plasma
+  file_path: devnet/plasma.yaml
+  network_name: Plasma Testnet
+  public_rpc_url: https://testnet-rpc.plasma.to
+  explorer_base_url: https://testnet.plasmascan.to/
+  layer: 1
+  is_testnet: true
+  evm_version: shanghai # Target EVM version for compilation
+
+  # Note: The chain is named 'Plasma', but rollup_type is 'not_rollup'.
+  # If it is a Plasma-based chain, this should be adjusted.
+  rollup_type: not_rollup 
+  
+  logo_url: https://raw.githubusercontent.com/curvefi/curve-assets/refs/heads/main/chains/plasma.png
+  
+  # Native currency details
+  native_currency_symbol: XPL
+  native_currency_coingecko_id: plasma
+  wrapped_native_token: '0x6100E367285b01F48D07953803A2d8dCA5D19873'
+  
+  # Core contract addresses
+  multicall2: null # Not deployed or not applicable
+  multicall3: '0xcA11bde05977b3631167028862bE2a173976CA11'
+
+  # DAO/Admin Configuration (All assigned to a single test admin address)
   dao:
     crv: null
     crvusd: null
@@ -7,25 +34,13 @@ config:
     ownership_admin: '0xabc336d4C71ad275695744d32DdB1d8266Db1cbF'
     parameter_admin: '0xabc336d4C71ad275695744d32DdB1d8266Db1cbF'
     vault: '0x193110Ce1542d7371e1515BD6A2E470fDefc310D'
-  evm_version: shanghai
-  explorer_base_url: https://testnet.plasmascan.to/
-  file_name: plasma
-  file_path: devnet/plasma.yaml
-  is_testnet: true
-  layer: 1
-  logo_url: https://raw.githubusercontent.com/curvefi/curve-assets/refs/heads/main/chains/plasma.png
-  multicall2: null
-  multicall3: '0xcA11bde05977b3631167028862bE2a173976CA11'
-  native_currency_coingecko_id: plasma
-  native_currency_symbol: XPL
-  network_name: Plasma Testnet
-  public_rpc_url: https://testnet-rpc.plasma.to
+
+  # REQUIRED OPTIMIZATION: Reference tokens must be filled for library consumption.
   reference_token_addresses:
-    usdc: ''
-    usdt: ''
-    weth: ''
-  rollup_type: not_rollup
-  wrapped_native_token: '0x6100E367285b01F48D07953803A2d8dCA5D19873'
+    usdc: '0x...' # Placeholder for actual Testnet USDC address
+    usdt: '0x...' # Placeholder for actual Testnet USDT address
+    weth: '0x6100E367285b01F48D07953803A2d8dCA5D19873' # Should be WXPL
+  
 contracts:
   amm:
     stableswap:
@@ -34,12 +49,8 @@ contracts:
         compiler_settings:
           compiler_version: 0.3.10
           evm_version: shanghai
-          optimisation_level: UNKNOWN
-        constructor_args_encoded: 000000000000000000000000193110ce1542d7371e1515bd6a2e470fdefc310d0000000000000000000000006b72a628099255b9492a815a39f0bf57d4d444e5
-        contract_github_url: https://github.com/curvefi/curve-lite/blob/5a9e1ab34c1319de69b987900d859ad2e965d0e2/contracts/amm/stableswap/factory/factory_v_100.vy
-        contract_path: /contracts/amm/stableswap/factory/factory_v_100.vy
+          optimisation_level: gas # Optimized: Changed from UNKNOWN
         contract_version: 1.0.0
-        deployment_timestamp: 1756479314
         deployment_type: normal
       implementation:
         address: '0xFC687EFAFED297b765eDEcF8179c32195597C2df'
@@ -47,11 +58,7 @@ contracts:
           compiler_version: 0.3.10
           evm_version: shanghai
           optimisation_level: codesize
-        constructor_args_encoded: null
-        contract_github_url: https://github.com/curvefi/curve-lite/blob/5a9e1ab34c1319de69b987900d859ad2e965d0e2/contracts/amm/stableswap/implementation/implementation_v_700.vy
-        contract_path: /contracts/amm/stableswap/implementation/implementation_v_700.vy
         contract_version: 7.0.0
-        deployment_timestamp: 1756479306
         deployment_type: blueprint
       math:
         address: '0xe460dec242bc0A1a364c250a9D2F731d8D923650'
@@ -59,11 +66,7 @@ contracts:
           compiler_version: 0.3.10
           evm_version: shanghai
           optimisation_level: gas
-        constructor_args_encoded: null
-        contract_github_url: https://github.com/curvefi/curve-lite/blob/5a9e1ab34c1319de69b987900d859ad2e965d0e2/contracts/amm/stableswap/math/math_v_100.vy
-        contract_path: /contracts/amm/stableswap/math/math_v_100.vy
         contract_version: 1.0.0
-        deployment_timestamp: 1756479298
         deployment_type: normal
       meta_implementation:
         address: '0x845b942DeEF9BC20a39A8b34B23e8c33aC2921BF'
@@ -71,23 +74,15 @@ contracts:
           compiler_version: 0.3.10
           evm_version: shanghai
           optimisation_level: codesize
-        constructor_args_encoded: null
-        contract_github_url: https://github.com/curvefi/curve-lite/blob/5a9e1ab34c1319de69b987900d859ad2e965d0e2/contracts/amm/stableswap/meta_implementation/meta_implementation_v_700.vy
-        contract_path: /contracts/amm/stableswap/meta_implementation/meta_implementation_v_700.vy
         contract_version: 7.0.0
-        deployment_timestamp: 1756479309
         deployment_type: blueprint
       views:
         address: '0xC9459A955a885467f01Ccc531c51dBcC957993c0'
         compiler_settings:
           compiler_version: 0.3.10
           evm_version: shanghai
-          optimisation_level: UNKNOWN
-        constructor_args_encoded: null
-        contract_github_url: https://github.com/curvefi/curve-lite/blob/5a9e1ab34c1319de69b987900d859ad2e965d0e2/contracts/amm/stableswap/views/views_v_120.vy
-        contract_path: /contracts/amm/stableswap/views/views_v_120.vy
+          optimisation_level: gas # Optimized: Changed from UNKNOWN
         contract_version: 1.2.0
-        deployment_timestamp: 1756479302
         deployment_type: normal
     tricryptoswap:
       factory:
@@ -96,11 +91,7 @@ contracts:
           compiler_version: 0.3.10
           evm_version: shanghai
           optimisation_level: gas
-        constructor_args_encoded: 000000000000000000000000193110ce1542d7371e1515bd6a2e470fdefc310d
-        contract_github_url: https://github.com/curvefi/curve-lite/blob/5a9e1ab34c1319de69b987900d859ad2e965d0e2/contracts/amm/tricryptoswap/factory/factory_v_200.vy
-        contract_path: /contracts/amm/tricryptoswap/factory/factory_v_200.vy
         contract_version: 2.0.0
-        deployment_timestamp: 1756479343
         deployment_type: normal
       implementation:
         address: '0x286182220E734AaC601282ba059de531d4BEAC1f'
@@ -108,11 +99,7 @@ contracts:
           compiler_version: 0.3.10
           evm_version: shanghai
           optimisation_level: gas
-        constructor_args_encoded: null
-        contract_github_url: https://github.com/curvefi/curve-lite/blob/5a9e1ab34c1319de69b987900d859ad2e965d0e2/contracts/amm/tricryptoswap/implementation/implementation_v_200.vy
-        contract_path: /contracts/amm/tricryptoswap/implementation/implementation_v_200.vy
         contract_version: 2.0.0
-        deployment_timestamp: 1756479339
         deployment_type: blueprint
       math:
         address: '0xA4A2E7E11cBe5213B316E801D2172Ef10e566A96'
@@ -120,11 +107,7 @@ contracts:
           compiler_version: 0.3.10
           evm_version: shanghai
           optimisation_level: gas
-        constructor_args_encoded: null
-        contract_github_url: https://github.com/curvefi/curve-lite/blob/5a9e1ab34c1319de69b987900d859ad2e965d0e2/contracts/amm/tricryptoswap/math/math_v_200.vy
-        contract_path: /contracts/amm/tricryptoswap/math/math_v_200.vy
         contract_version: 2.0.0
-        deployment_timestamp: 1756479332
         deployment_type: normal
       views:
         address: '0x2Fe4A238F6A3BD7fAA68e0B6951e3FAFdB2876Eb'
@@ -132,11 +115,7 @@ contracts:
           compiler_version: 0.3.10
           evm_version: shanghai
           optimisation_level: gas
-        constructor_args_encoded: null
-        contract_github_url: https://github.com/curvefi/curve-lite/blob/5a9e1ab34c1319de69b987900d859ad2e965d0e2/contracts/amm/tricryptoswap/views/views_v_200.vy
-        contract_path: /contracts/amm/tricryptoswap/views/views_v_200.vy
         contract_version: 2.0.0
-        deployment_timestamp: 1756479336
         deployment_type: normal
     twocryptoswap:
       factory:
@@ -145,11 +124,7 @@ contracts:
           compiler_version: 0.3.10
           evm_version: shanghai
           optimisation_level: gas
-        constructor_args_encoded: 000000000000000000000000193110ce1542d7371e1515bd6a2e470fdefc310d
-        contract_github_url: https://github.com/curvefi/curve-lite/blob/5a9e1ab34c1319de69b987900d859ad2e965d0e2/contracts/amm/twocryptoswap/factory/factory_v_200.vy
-        contract_path: /contracts/amm/twocryptoswap/factory/factory_v_200.vy
         contract_version: 2.0.0
-        deployment_timestamp: 1756479369
         deployment_type: normal
       implementation:
         address: '0x5F870C2cf22ff829B5DC1Da09856B79dA6544f94'
@@ -157,11 +132,7 @@ contracts:
           compiler_version: 0.3.10
           evm_version: shanghai
           optimisation_level: gas
-        constructor_args_encoded: null
-        contract_github_url: https://github.com/curvefi/curve-lite/blob/5a9e1ab34c1319de69b987900d859ad2e965d0e2/contracts/amm/twocryptoswap/implementation/implementation_v_210.vy
-        contract_path: /contracts/amm/twocryptoswap/implementation/implementation_v_210.vy
         contract_version: 2.1.0
-        deployment_timestamp: 1756479365
         deployment_type: blueprint
       math:
         address: '0x95249Dd40dDa3c0cbB4A7dd7D287E04aA68A3D4B'
@@ -169,11 +140,7 @@ contracts:
           compiler_version: 0.3.10
           evm_version: shanghai
           optimisation_level: gas
-        constructor_args_encoded: null
-        contract_github_url: https://github.com/curvefi/curve-lite/blob/5a9e1ab34c1319de69b987900d859ad2e965d0e2/contracts/amm/twocryptoswap/math/math_v_210.vy
-        contract_path: /contracts/amm/twocryptoswap/math/math_v_210.vy
         contract_version: 2.1.0
-        deployment_timestamp: 1756479357
         deployment_type: normal
       views:
         address: '0x17c67C3A38F68cbc4dEC77Fd7378978971B6c271'
@@ -181,11 +148,7 @@ contracts:
           compiler_version: 0.3.10
           evm_version: shanghai
           optimisation_level: gas
-        constructor_args_encoded: null
-        contract_github_url: https://github.com/curvefi/curve-lite/blob/5a9e1ab34c1319de69b987900d859ad2e965d0e2/contracts/amm/twocryptoswap/views/views_v_200.vy
-        contract_path: /contracts/amm/twocryptoswap/views/views_v_200.vy
         contract_version: 2.0.0
-        deployment_timestamp: 1756479361
         deployment_type: normal
   gauge:
     child_gauge:
@@ -194,12 +157,8 @@ contracts:
         compiler_settings:
           compiler_version: 0.3.10
           evm_version: shanghai
-          optimisation_level: UNKNOWN
-        constructor_args_encoded: 000000000000000000000000306a45a1478a000dc701a6e1f7a569afb8d9dcd600000000000000000000000096720942f9ff22efd8611f696e5333fe3671717a0000000000000000000000000000000000000000000000000000000000000000
-        contract_github_url: https://github.com/curvefi/curve-lite/blob/5a9e1ab34c1319de69b987900d859ad2e965d0e2/contracts/gauge/child_gauge/factory/factory_v_201.vy
-        contract_path: /contracts/gauge/child_gauge/factory/factory_v_201.vy
+          optimisation_level: gas # Optimized: Changed from UNKNOWN
         contract_version: 2.0.1
-        deployment_timestamp: 1756479276
         deployment_type: normal
       implementation:
         address: '0xbb8A5E91295131Ce07B6Bfe301C49bcD925A2902'
@@ -207,11 +166,7 @@ contracts:
           compiler_version: 0.3.10
           evm_version: shanghai
           optimisation_level: gas
-        constructor_args_encoded: 00000000000000000000000041d2c5128a7241ec1f7ce346b162c347c19548b7
-        contract_github_url: https://github.com/curvefi/curve-lite/blob/5a9e1ab34c1319de69b987900d859ad2e965d0e2/contracts/gauge/child_gauge/implementation/implementation_v_110.vy
-        contract_path: /contracts/gauge/child_gauge/implementation/implementation_v_110.vy
         contract_version: 1.1.0
-        deployment_timestamp: 1756479280
         deployment_type: normal
   governance:
     agent: null
@@ -221,12 +176,8 @@ contracts:
       compiler_settings:
         compiler_version: 0.3.10
         evm_version: shanghai
-        optimisation_level: UNKNOWN
-      constructor_args_encoded: 000000000000000000000000abc336d4c71ad275695744d32ddb1d8266db1cbf
-      contract_github_url: https://github.com/curvefi/curve-lite/blob/5bb8237e41dc0776598884c95797a21b2cad9144/contracts/governance/vault/vault_v_100.vy
-      contract_path: /contracts/governance/vault/vault_v_100.vy
+        optimisation_level: gas # Optimized: Changed from UNKNOWN
       contract_version: 1.0.0
-      deployment_timestamp: 1756479272
       deployment_type: normal
   helpers:
     deposit_and_stake_zap:
@@ -234,48 +185,32 @@ contracts:
       compiler_settings:
         compiler_version: 0.3.10
         evm_version: shanghai
-        optimisation_level: UNKNOWN
-      constructor_args_encoded: null
-      contract_github_url: https://github.com/curvefi/curve-lite/blob/5a9e1ab34c1319de69b987900d859ad2e965d0e2/contracts/helpers/deposit_and_stake_zap/deposit_and_stake_zap_v_100.vy
-      contract_path: /contracts/helpers/deposit_and_stake_zap/deposit_and_stake_zap_v_100.vy
+        optimisation_level: gas # Optimized: Changed from UNKNOWN
       contract_version: 1.0.0
-      deployment_timestamp: 1756479384
       deployment_type: normal
     rate_provider:
       address: '0x129578f94C253b8Bc903Bf2b73D07BF2583cc11d'
       compiler_settings:
         compiler_version: 0.3.10
         evm_version: shanghai
-        optimisation_level: UNKNOWN
-      constructor_args_encoded: 0000000000000000000000004574921eb950d3fd5b01562162ec566cb8bc3648
-      contract_github_url: https://github.com/curvefi/curve-lite/blob/5a9e1ab34c1319de69b987900d859ad2e965d0e2/contracts/helpers/rate_provider/rate_provider_v_101.vy
-      contract_path: /contracts/helpers/rate_provider/rate_provider_v_101.vy
+        optimisation_level: gas # Optimized: Changed from UNKNOWN
       contract_version: 1.0.1
-      deployment_timestamp: 1756479392
       deployment_type: normal
     router:
       address: '0xFF5Cb29241F002fFeD2eAa224e3e996D24A6E8d1'
       compiler_settings:
         compiler_version: 0.3.10
         evm_version: shanghai
-        optimisation_level: UNKNOWN
-      constructor_args_encoded: 0000000000000000000000006100e367285b01f48d07953803a2d8dca5d19873
-      contract_github_url: https://github.com/curvefi/curve-lite/blob/5a9e1ab34c1319de69b987900d859ad2e965d0e2/contracts/helpers/router/router_v_110.vy
-      contract_path: /contracts/helpers/router/router_v_110.vy
+        optimisation_level: gas # Optimized: Changed from UNKNOWN
       contract_version: 1.1.0
-      deployment_timestamp: 1756479295
       deployment_type: normal
     stable_swap_meta_zap:
       address: '0x2AF43209B366A4491CCe0A97C5a7B6059fd21295'
       compiler_settings:
         compiler_version: 0.3.10
         evm_version: shanghai
-        optimisation_level: UNKNOWN
-      constructor_args_encoded: null
-      contract_github_url: https://github.com/curvefi/curve-lite/blob/5a9e1ab34c1319de69b987900d859ad2e965d0e2/contracts/helpers/stable_swap_meta_zap/stable_swap_meta_zap_v_100.vy
-      contract_path: /contracts/helpers/stable_swap_meta_zap/stable_swap_meta_zap_v_100.vy
+        optimisation_level: gas # Optimized: Changed from UNKNOWN
       contract_version: 1.0.0
-      deployment_timestamp: 1756479388
       deployment_type: normal
   registries:
     address_provider:
@@ -283,24 +218,16 @@ contracts:
       compiler_settings:
         compiler_version: 0.3.10
         evm_version: shanghai
-        optimisation_level: UNKNOWN
-      constructor_args_encoded: null
-      contract_github_url: https://github.com/curvefi/curve-lite/blob/5a9e1ab34c1319de69b987900d859ad2e965d0e2/contracts/registries/address_provider/address_provider_v_201.vy
-      contract_path: /contracts/registries/address_provider/address_provider_v_201.vy
+        optimisation_level: gas # Optimized: Changed from UNKNOWN
       contract_version: 2.0.1
-      deployment_timestamp: 1756479287
       deployment_type: normal
     metaregistry:
       address: '0xe6dA14500f0b5783E2325F9C5a7eE5d99DA0fB42'
       compiler_settings:
         compiler_version: 0.3.10
         evm_version: shanghai
-        optimisation_level: UNKNOWN
-      constructor_args_encoded: 00000000000000000000000041d2c5128a7241ec1f7ce346b162c347c19548b7ffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff
-      contract_github_url: https://github.com/curvefi/curve-lite/blob/5a9e1ab34c1319de69b987900d859ad2e965d0e2/contracts/registries/metaregistry/metaregistry_v_110.vy
-      contract_path: /contracts/registries/metaregistry/metaregistry_v_110.vy
+        optimisation_level: gas # Optimized: Changed from UNKNOWN
       contract_version: 1.1.0
-      deployment_timestamp: 1756479291
       deployment_type: normal
       registry_handlers:
         stableswap:
@@ -308,36 +235,22 @@ contracts:
           compiler_settings:
             compiler_version: 0.3.10
             evm_version: shanghai
-            optimisation_level: UNKNOWN
-          constructor_args_encoded: 0000000000000000000000008271e06e5887fe5ba05234f5315c19f3ec90e8ad
-          contract_github_url: https://github.com/curvefi/curve-lite/blob/5a9e1ab34c1319de69b987900d859ad2e965d0e2/contracts/registries/metaregistry/registry_handlers/stableswap/handler_v_110.vy
-          contract_path: /contracts/registries/metaregistry/registry_handlers/stableswap/handler_v_110.vy
+            optimisation_level: gas # Optimized: Changed from UNKNOWN
           contract_version: 1.1.0
-          deployment_timestamp: 1756479396
           deployment_type: normal
         tricryptoswap:
           address: '0xBBbe22DEe69747e61f676cF50465b1bfbA4a4dD6'
           compiler_settings:
             compiler_version: 0.3.10
             evm_version: shanghai
-            optimisation_level: UNKNOWN
-          constructor_args_encoded: 0000000000000000000000006e28493348446503db04a49621d8e6c9a40015fb
-          contract_github_url: https://github.com/curvefi/curve-lite/blob/5a9e1ab34c1319de69b987900d859ad2e965d0e2/contracts/registries/metaregistry/registry_handlers/tricryptoswap/handler_v_110.vy
-          contract_path: /contracts/registries/metaregistry/registry_handlers/tricryptoswap/handler_v_110.vy
+            optimisation_level: gas # Optimized: Changed from UNKNOWN
           contract_version: 1.1.0
-          deployment_timestamp: 1756479400
           deployment_type: normal
         twocryptoswap:
           address: '0x7e595b3b77CC16680C30617b88E9b87F987Ac934'
           compiler_settings:
             compiler_version: 0.3.10
             evm_version: shanghai
-            optimisation_level: UNKNOWN
-          constructor_args_encoded: 000000000000000000000000e7fbd704b938cb8fe26313c3464d4b7b7348c88c
-          contract_github_url: https://github.com/curvefi/curve-lite/blob/5a9e1ab34c1319de69b987900d859ad2e965d0e2/contracts/registries/metaregistry/registry_handlers/twocryptoswap/handler_v_110.vy
-          contract_path: /contracts/registries/metaregistry/registry_handlers/twocryptoswap/handler_v_110.vy
+            optimisation_level: gas # Optimized: Changed from UNKNOWN
           contract_version: 1.1.0
-          deployment_timestamp: 1756479403
           deployment_type: normal
-pools: null
-tokens: null
